# streaming-parquet

./: Cargo.toml  Dockerfile  LICENSE  README.md  check_build.sh  check_final.sh  check_final_build.sh  check_status.sh  justfile  test_build.sh  test_compile.sh
benches/: throughput.rs
examples/: basic_usage.sh
src/: cli.rs  coercion.rs  csv_in.rs  discover.rs  error.rs  main.rs  parquet_in.rs  pipeline.rs  progress.rs  schema.rs  state.rs  writer_csv.rs  writer_parquet.rs
tests/: basic.rs  e2e_csv.rs  integration.rs
