[package]
name = "maw"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Grant"]
description = "A high-performance CLI for streaming and concatenating CSV and Parquet files"
license = "MIT"
repository = "https://github.com/joshuagrant/streaming-parquet"

[[bin]]
name = "maw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CSV processing
csv = "1.3"
encoding_rs = "0.8"

# Arrow/Parquet (using arrow2/parquet2 for better performance)
arrow2 = { version = "0.18", features = ["io_parquet", "io_csv"] }
parquet2 = "0.17"

# Compression
zstd = "0.13"
flate2 = "1.0"
snap = "1.0"

# Progress and UX
indicatif = "0.17"
human_bytes = "0.4"
humantime = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
globwalk = "0.8"
walkdir = "2.4"

# Parallel processing
rayon = "1.8"

# Checksums
crc64fast = "1.1.0"

# Testing
proptest = "1.0"
insta = "1.0"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
